<resources>
    <string name="app_name">Passwords</string>
    <string name="plus_sign">+</string>
    <string name="title_activity_login">MasterKey</string>
    <string name="title_activity_get_username_and_password">Choose account</string>
    <string name="title_activity_preview">PreviewActivity</string>
    <string name="author">Predrag Ožegović</string>
    <string name="login_text">Login</string>
    <string name="enter_master_key">Enter master key</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="generate_password">Generate password</string>
    <string name="enter_service_name">Enter service name</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="done">Done</string>
    <string name="title_activity_password_list">PasswordListActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_subtitle"> </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sharedPrefernces">@string/app_name</string>
    <string name="dark_mode">Dark mode</string>
    <string name="biometric_unlock">Fingerprint unlock</string>
</resources>
