<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/addAccountActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/fileName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/enter_service_name"
        android:singleLine="true"
        android:textSize="20sp"
        android:importantForAutofill="no"
        tools:ignore="UnusedAttribute"
        android:inputType="text" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/enter_username"
        android:singleLine="true"
        android:textSize="20sp"
        android:importantForAutofill="no"
        tools:ignore="UnusedAttribute"
        android:inputType="text" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/enter_password"
        android:inputType="textNoSuggestions|textPassword"
        android:singleLine="true"
        android:textSize="20sp"
        android:importantForAutofill="no"
        tools:ignore="UnusedAttribute" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:layout_marginTop="20dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:text="@string/generate_password"
            android:id="@+id/generatePassword"
            android:onClick="generatePass"
            android:background="@drawable/border"
            tools:ignore="ButtonStyle" />
        <Button
            android:layout_marginTop="20dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:text="@string/done"
            android:id="@+id/doneButton"
            android:background="@drawable/border"
            android:onClick="AddAcc"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />

</LinearLayout>